- making a series of location changes in a script. (LP: #500192)
- telescope control sending RA=0 for objects with RA between (12 and 24?) on Intel Macs. (LP: #544250, fix proposed by David Hulse)
- windows and toolbars not being affected by night vision mode. (LP: #539665)
- a crash on Windows when exiting Stellarium after a search. (LP: #534674)

Changed:
- The Date/Time window now is synchronised with the date/time displayed in the toolbar, instead of showing the last date/time that has been entered.
- the visual style of some plug-ins. 

Added:
- option to create a desktop shortcut in the Windows installer.
- time dragging: Hold down Ctrl+Space and drag the mouse across the sky to change time speed.
- re-added the "planet trails" feature. Toggle with Shift+T.
- some Sky-Watcher mounts to the list of devices supported by the Telescope Control plug-in.


0.10.4 [2010-02-22]
Bug fix release.
Fixed unpredictable openGL related crashes on win32.
Fixed run on MacOSX Tiger/Leopard/Snow Leopard.
Disable OpenGL shaders by default for stars and atmosphere. User activate it by setting use_glshaders = true in the [main] section of the config.ini
Fixed the handling of the Qt -graphicssystem parameter. Now it is ignored if it is not used properly.
Improved OpenGLES2 support (not finished yet).
Added Qt widgets flags on the main windows to avoid filling background (this boosted the program a lot on linux).

0.10.3 [2010-01-28]
Based on Qt 4.6.x
Bundling of plugins: Satellites, Oculars, AngleMeasure, CompassMarks, TelescopeControl, TextUserInterface.
New script engine improvements including variable script running speed, and a script console (activate with F12).
Made tabs in GUI smaller by moving titles under the icons.
Updated the plugin API to allow to compilation and easy distribution of static plugins.
Added plugins window.
Got rid of the boost library dependency.