@@ -10,10 +10,13 @@ Fixed:
 - telescope control sending RA=0 for objects with RA between (12 and 24?) on Intel Macs. (LP: #544250, fix proposed by David Hulse)
 - windows and toolbars not being affected by night vision mode. (LP: #539665)
 - a crash on Windows when exiting Stellarium after a search. (LP: #534674)
+- problems when switching tasks (Alt+Tab) when in fullscreen mode. (LP: #550337)
+- the Oculars plug-in not closing its SQL database on exit.
+- the last star catalog not being offered for download. (LP: #538291)
 
 Changed:
 - The Date/Time window now is synchronised with the date/time displayed in the toolbar, instead of showing the last date/time that has been entered.
-- the visual style of some plug-ins. 
+- the visual style of some plug-ins.
 
 Added:
 - option to create a desktop shortcut in the Windows installer.
